--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,8 @@
 
 body {
     color: #000000;
-    background: url(1717860921984.jpg);
-    
+    /* background: url(1717860921984.jpg); */
+
 }
 
 header {
@@ -27,23 +27,23 @@ header {
 .logo {
     position: relative;
     font-size: 25px;
-    color: #000000;
     text-decoration: none;
     font-weight: 600;
     cursor: default;
+    color: white !important;
     opacity: 0;
     animation: slideRight 1s ease forwards;
 }
 
 .navbar a {
     display: inline-block;
-    font-size: 25px;
-    color: #000000;
+    font-size: 20px;
+    color: white !important;
     text-decoration: none;
-    font-weight: 500;
     margin-left: 35px;
     transition: .3s;
     opacity: 0;
+    font-weight: 400 !important;
     animation: slideTop .5s ease forwards;
     animation-delay: calc(.2s * var(--1));
 
@@ -109,6 +109,10 @@ header {
 
 }
 
+.home-sci {
+    margin-top: 10px;
+}
+
 .home-sci a {
     display: inline-flex;
     justify-content: center;
@@ -124,9 +128,9 @@ header {
     transition: .5s ease;
     opacity: 0;
     animation: slideLeft 1s ease forwards;
-    animation-delay: calc(2s  * var(--1))
+    animation-delay: calc(2s * var(--1));
+    border-bottom: 20px;
 
-    
 
 }
 
@@ -134,6 +138,10 @@ header {
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
+}
+
+.profile_image {
+    width: 450px;
 }
 
 .btn-box {
@@ -147,77 +155,84 @@ header {
     text-decoration: none;
     font-weight: 600;
     opacity: 0;
+    margin-top: 20px;
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
-    box-shadow: 0 0 5px #0ef,
-        0 0 25px #0ef;
+
 }
 
-.btn.box:hover {
-    box-shadow: 0 0 5px cyan,
-    0 0 25px cyan, 0 0 50px cyan,
-    0 0 100px cyan, 0 0 200px cyan;
-}
+.btn.box:hover {}
 
-.about{
+
+
+
+.about {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
 
+
 }
-.about-img img{
+
+.about-img img {
     padding-bottom: 20%;
-    max-width: 630px;
     height: auto;
-    width: 100%;
+    width: 550px;
     border-radius: 8px;
 }
-.about-text h2{
+
+.about-text h2 {
     font-size: 60px;
 }
-.about-text h2 span{
+
+.about-text h2 span {
     color: #0ef;
 }
-.about-text h4{
+
+.about-text h4 {
     font-size: 29px;
     font-weight: 600;
-    color: #fff;
     line-height: 1.7;
     margin: 15px 0 30px;
 }
-.about-text p{
+
+.about-text p {
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 4rem;
+}
+
+#services-list {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
 }
-#services-list{
-    color: aliceblue;
-    font-size: 20px;
-    line-height: 1.4;
-    margin-bottom: 4rem;
-}
+
 .sub-title {
     text-align: center;
     font-size: 60px;
     padding: 70px;
 
 }
-.sub-title span{
+
+.sub-title span {
     color: #0ef;
 }
-.container{
+
+.container {
     padding: 9opx;
 
 }
-.services-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,mimax(259px,1fr));
+
+.services-list {
+    display: flex;
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+
+.services-list div {
     background-color: transparent;
     padding: 40px;
     font-size: 13px;
@@ -225,127 +240,155 @@ header {
     border-right: 10px;
     border-radius: 20px;
     transition: background 0.5s, transfrom 0.5s;
-    box-shadow: 1px 1px 20px #012290f7,
-              1px 1px 40px #0053b8f7;
+    border: 1px solid rgba(207, 207, 207, 0.416);
 }
-.services-list div i{
+
+.services-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 }
-.services-list div h2{
+
+.services-list div h2 {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
-.services-list div a{
+
+.services-list div a {
     text-decoration: none;
     color: #000000;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
-.read{
+
+.read {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
     border-radius: 40px;
     font-size: 16px;
-    color: #081b29;
     letter-spacing: 1px;
     text-decoration: none;
     font-weight: 600;
     opacity: 0;
     animation: slideTop 1s ease forwards;
     animation-delay: 2s;
-    box-shadow: 0 0 5px #0ef,
-        0 0 25px #0ef;
+    color: white !important;
+
+
 }
-.read:hover{
+
+.read:hover {
     box-shadow: 0 0 5px cyan,
-    0 0 25px cyan, 0 0 50px cyan,
-    0 0 100px cyan, 0 0 200px cyan;
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan;
 }
-.services-list div:hover{
+
+.services-list div:hover {
     transform: translateY(-10px);
 }
-.section{
+
+.section {
     display: flex;
     flex-wrap: wrap;
 }
-.container1{
+
+.skill-section {
+    /* background-color: red; */
+    display: flex;
+}
+
+.container1 {
     width: 600px;
     height: 500px;
     padding: 75px 90px;
     margin-left: 120px;
 }
-.heading1{
+
+.heading1 {
     text-align: center;
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-thickness: 5px;
     margin-bottom: 50px;
 }
-.bar{
+
+.bar {
     font-size: 23px;
+    margin-bottom: 10px;
+
 }
-.Technical-bars .bar{
+
+.Technical-bars .bar {
     margin-top: 40px 0
 }
-.Technical-bars .bar:first-child{
+
+.Technical-bars .bar:first-child {
     margin-top: 0;
 }
-.Technical-bars .bar:last-child{
+
+.Technical-bars .bar:last-child {
     margin-bottom: 0;
 }
-.Technical-bars .bar .info{
+
+.Technical-bars .bar .info {
     margin-bottom: 5px;
 }
-.Technical-bars .bar .info span{
+
+.Technical-bars .bar .info span {
     font-size: 17px;
     font-weight: 500;
     animation: showText 0.5s 1s linear forwards;
-    opacity: 0;
 }
-.Technical-bars .bar .progress-line{
+
+.progress-line {
     position: relative;
     border-radius: 10px;
     width: 100%;
-    height: 5px;
+    height: 10px;
     background-color: #000000;
-    animation: animate 1s cubic-bezier(1, 0, 0,5, 1)forwards;
-    transform: scaleX(0);
+    animation: animate 1s cubic-bezier(1, 0, 0, 5, 1)forwards;
     transform-origin: left;
 }
-@keyframes animate{
-    100%{
+
+@keyframes animate {
+    100% {
         transform: scaleX(1);
     }
 }
-.Technical-bars .bar .progress-line span{
+
+.Technical-bars .bar .progress-line span {
     height: 100%;
     background-color: #0ef;
     position: absolute;
     border-radius: 1opx;
-    animation: 1s 1s cubic-bezier(1, 0, 0,5,1)forwards;
-    transform: scaleX(0);
+    background: rgb(2,0,36);
+    background: linear-gradient(112deg, rgba(2,0,36,1) 0%, rgba(15,9,121,0.9766500350140056) 37%, rgba(0,212,255,1) 100%);
     transform-origin: left;
 }
-.progress-line.html span{
-    width: "90%";
+
+.progress-line.html span {
+    width: 90%;
 }
-.progress-line.css span{
-    width: "60%";
+
+.progress-line.css span {
+    width: 60%;
 }
-.progress-line.javascript span{
-    width: "85%";
+
+.progress-line.javascript span {
+    width: 85%;
 }
-.progress-line.python span{
-    width: "50%";
+
+.progress-line.python span {
+    width: 50%;
 }
-.progress-line.react span{
-    width: "75%";
+
+.progress-line.react span {
+    width: 75%;
 }
-.progress-line span::after{
+
+.progress-line span::after {
     position: absolute;
     padding: 1px 8px;
     background-color: #000;
@@ -357,20 +400,25 @@ header {
     animation: showText 0.5s 1.5s linear forwards;
     opacity: 0;
 }
-.progress-line.html span::after{
-    content: "90%";
+
+.progress-line.html span::after {
+    content: 90%;
 }
-.progress-line.css span::after{
-    content: "60%";
+
+.progress-line.css span::after {
+    content: 60%;
 }
-.progress-line.javascript span::after{
-    content: "85%";
+
+.progress-line.javascript span::after {
+    content: 85%;
 }
-.progress-line.python span::after{
-    content: "50%";
+
+.progress-line.python span::after {
+    content: 50%;
 }
-.progress-line.react span::after{
-    content: "75%";
+
+.progress-line.react span::after {
+    content: 75%;
 }
 
 @keyframes slideRight {
@@ -420,4 +468,18 @@ header {
         transform: translateY(0px);
         opacity: 1;
     }
+}
+.professional-skills-box{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.radial-bars{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 150px;
+    background-color: rgba(205, 202, 202, 0.417);
+    border-radius: 20px;
 }
